# bca-survival-analyzer

./: .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.py  setup_pre_commit.ps1
.github/workflows/: ci.yml  docs.yml  release.yml
bca_survival/: __init__.py  analyzer.py  models.py  preprocessing.py  utils.py
bca_survival/tools/: README.md  __init__.py  bca_merger.py  bca_totalseg_extraction.py  pdf_report_extractor.py  results_converter.py
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.md  quickstart.md
paper/: paper.bib  paper.md
tests/: conftest.py  test_cli_tools.py  test_data_aggregation.py  test_survival_analysis.py
tools/: README.md  bca-totalseg-extraction.py
