[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "bca_survival"
description = "A package for survival analysis with body composition assessment data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dynamic = ["version"]
authors = [
    {name = "Eric Frodl", email = "frodl@med.uni-frankfurt.de"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pandas>=2.2.1",
    "numpy>=1.24.3",
    "scikit-learn>=1.4.2",
    "lifelines>=0.28.0",
    "matplotlib>=3.9.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.0",
    "tqdm>=4.66.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.3.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

docs = [
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.17.0",
]

[project.scripts]
boa-extract = "tools.bca_totalseg_extraction.py:main_cli"

[tool.setuptools]
packages = ["bca_survival"]

[tool.setuptools.package-data]
survival_analysis = ["py.typed"]

[tool.setuptools_scm]
write_to = "bca_survival/_version.py"

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["pandas.*", "numpy.*", "lifelines.*", "matplotlib.*", "seaborn.*", "statsmodels.*", "sklearn.*", "tqdm.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=bca_survival --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["bca_survival"]
omit = ["tests/*", "*/conftest.py", "*/__init__.py", "*/_version.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]